--- a/ProgettoAMM/web/M2/style.css
+++ b/ProgettoAMM/web/M2/style.css
@@ -8,42 +8,44 @@ and open the template in the editor.
     Author     : Davide Fara
 */
 
-/* CSS Generico */
+/* CSS tag */
+a:link
+{
+    color: #1e6f9e;
+    text-decoration: none;
+}
+
+a:visited
+{
+    color: #0f5bbf;
+    text-decoration: none;
+}
+
+a:hover
+{
+    color: #003882;
+    text-decoration: none;
+}
+
 body
 {
-    background-color: #f7f7f7;
-    font: 30px/25px "Calibri", Arial, sans-serif;
-}
-
-
-nav ol, nav li
-{
-    /*
-    background-color: #ffffff;
-    font: 30px/35px "Calibri", Arial, sans-serif;
-    */
-    list-style-type: none;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: inline-block;
-}
-
-header
-{
-    background-color: #333333;
+    background-color: #99b5c6;
+    font-size: 30px;
 }
 
 h1
 {
-    background-color: #333333;
+    background-color: #1f3559;
     color: #ffffff;
     font: 40px/40px "Verdana", Arial, sans-serif;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 h2
 {
     color: #000000;
-    font: 20px/20px "Calibri", Arial, sans-serif;
+    font: 30px/30px "Calibri", Arial, sans-serif;
 }
 
 h3
@@ -53,83 +55,120 @@ h3
     font-weight: bold;
 }
 
+header
+{
+    background-color: #1f3559;
+    height: 50px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+    
+}
+
+header div, header nav
+{
+    display: inline-block;
+    background-color: #1f3559;
+    margin-top: 0px;
+    
+}
+
+header h1
+{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-right: 50px;
+   
+}
+
+header nav
+{
+    margin-top: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    position: static
+}
+
+nav ol, nav li
+{
+    list-style-type: none;
+    font: 20px/5px "Calibri", "Times New Roman", Arial, sans-serif; 
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: inline-block;
+    
+}
+
 p
 {
     color: #000000;
     font: 20px/25px "Calibri", "Times New Roman", Arial, sans-serif;
 }
 
-a:link
-{
-    color: #1d11aa;
-    text-decoration: none;
-}
-
-a:visited
-{
-    color:#e21c18;
-    text-decoration: underline;
-}
-
-a:hover
-{
-    color:#31bfc4;
-}
-
-header div h1
-{
-    margin-top: 0px;
-}
-
-header div h1, header nav
-{
-    display: inline-block;
-    margin-top: 0px;
-}
-
-/* FINE CSS GENERICO */
-
-/* CSS Bacheca */
-.post
-{
-    background-color: #ffffff;
-    color: #000000;
-      
-}
-
-#post2 #linkedImg
+/* CSS ID */
+#linkedImg
 {
     display: block;
 }
 
-.post .profilePic,h3
+#divBody
+{
+    margin-top: 30px;
+}
+
+#divBody h1
+{
+    font: 32px/32px "Calibri", "Times New Roman", Arial, sans-serif;
+}
+
+#side1
+{
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+}
+
+#sidePersone h2
+{
+    font-size: 30px;
+    font-weight: bold;
+    background-color: #1f3559;
+    color: #ffffff;
+    margin-top: 0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+}
+
+
+#side1, #divBody
+{
+    display: inline-table;
+}
+
+#sideUt1:after
+{
+    content: '\a';
+    white-space: pre;
+}
+
+/* CSS classi */
+.post
+{
+    background-color: #edf4f9;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+}
+
+.post .profilePic, .post h3
 {
     display: inline-block;
 }
 
-
-
-/* FINE CSS BACHECA */
-
-
-
-
-/* VCSS Profilo */
-
-/* FINE CSS PROFILO */
-
-
-
-
-
-/* CSS Login */
-
-/* FINE CSS LOGIN */
-
-
-
-
-
-/* CSS Descrizione */
-
-/* FINE CSS DESCRIZIONE */
+.post h1
+{
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+    margin-top: 30px;
+}
