--- a/ProgettoAMM/web/M2/style.css
+++ b/ProgettoAMM/web/M2/style.css
@@ -9,6 +9,11 @@ and open the template in the editor.
 */
 
 /* CSS tag */
+a:active
+{
+    color: #99b5c6;
+}
+
 a:link
 {
     color: #1e6f9e;
@@ -89,7 +94,7 @@ header nav
     position: static
 }
 
-nav ol, nav li
+header nav ol, header nav li
 {
     list-style-type: none;
     font: 20px/5px "Calibri", "Times New Roman", Arial, sans-serif; 
@@ -101,6 +106,12 @@ nav ol, nav li
     
 }
 
+html
+{
+    min-height: 100%;
+    position: relative;
+}
+
 p
 {
     color: #000000;
@@ -108,14 +119,10 @@ p
 }
 
 /* CSS ID */
-#linkedImg
-{
-    display: block;
-}
-
 #divBody
 {
-    margin-top: 30px;
+    margin-top: 0px;
+    float: left;
 }
 
 #divBody h1
@@ -123,14 +130,27 @@ p
     font: 32px/32px "Calibri", "Times New Roman", Arial, sans-serif;
 }
 
+#linkedImg
+{
+    display: block;
+    width: 98%;
+    height: auto;
+}
+
+
+
 #side1
 {
     background-color: #ffffff;
+    margin-top: 1px;
+    margin-right:50px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
+    float: left;
+    height: 100%;
 }
 
-#sidePersone h2
+#side1 h2
 {
     font-size: 30px;
     font-weight: bold;
@@ -147,10 +167,44 @@ p
     display: inline-table;
 }
 
-#sideUt1:after
+#subList, #divBody
 {
-    content: '\a';
-    white-space: pre;
+    display: inline-table;
+}
+
+#subList
+{
+    background-color: #ffffff;
+    margin-top: 1px;
+    margin-right:50px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+    float: left;
+    height: 100%;
+}
+
+#subList h2
+{
+    font-size: 30px;
+    font-weight: bold;
+    background-color: #1f3559;
+    color: #ffffff;
+    margin-top: 0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+}
+
+#subList li
+{
+    font-size: 20px;
+    margin-right: 15px;
+    margin-left: 15px;
+
+}
+
+#subList ul
+{
+    padding-left: 20px;
 }
 
 /* CSS classi */
@@ -166,9 +220,46 @@ p
     display: inline-block;
 }
 
+.post .profilePic, .post .h3, .post p, .post img
+{
+    padding: 10px;
+}
+
 .post h1
 {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
-    margin-top: 30px;
+    margin-top: 0px;
+}
+
+.sideList
+{
+    font-size: 20px;
+    margin-right: 15px;
+
+}
+
+.sideList ul
+{
+    padding-left: 20px;
+}
+
+#sidePersone .sideList li
+{
+    list-style-type: none;
+    background-image: url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRPhqHeM3p5ekSrzJJhxCop9iiJmJWwIgM_2Zcp9Vqm7REfTK7AgQ);
+    background-repeat: no-repeat;
+    background-position: 0px 5px;
+    padding-left: 23px;
+    padding-top: 4px;
+}
+
+#sideGruppi .sideList li
+{
+    list-style-type: none;
+    background-image: url(https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT39WuwJ8XWZH76LXeX_CNeiQFS-bc0bi2VccPg6SSM2tcZJXKNxg);
+    background-repeat: no-repeat;
+    background-position: 0px 5px;
+    padding-left: 23px;
+    padding-top: 4px;
 }
