--- a/ProgettoAMM/web/M2/style.css
+++ b/ProgettoAMM/web/M2/style.css
@@ -9,10 +9,11 @@ and open the template in the editor.
 */
 
 /* CSS tag */
-a:active
+header nav li.active
 {
     background-color: #ffffff;
     text-decoration: underline;
+    border-radius: 5px;
 }
 
 a:link
@@ -37,6 +38,7 @@ body
 {
     background-color: #99b5c6;
     font-size: 30px;
+    width: auto;
 }
 
 h1
@@ -64,10 +66,11 @@ h3
 header
 {
     background-color: #1f3559;
-    height: 50px;
+    height: 80px;
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
+    position: relative;
     
 }
 
@@ -81,7 +84,7 @@ header div, header nav
 
 header h1
 {
-    margin-top: 0px;
+    margin-top: 10px;
     margin-bottom: 0px;
     padding-right: 50px;
    
@@ -89,16 +92,25 @@ header h1
 
 header nav
 {
-    margin-top: 0px;
+    margin-top: 10px;
     padding-top: 0px;
     padding-bottom: 0px;
-    position: static
+    position: absolute;
+    top: 7px;
+    left: 450px;
+}
+
+header nav ol li a
+{
+    border-right: solid;
+    border-right: 10px;
+    border-right-color: #ffffff;
 }
 
 header nav ol, header nav li
 {
     list-style-type: none;
-    font: 20px/5px "Calibri", "Times New Roman", Arial, sans-serif; 
+    font: 27px/15px "Calibri", "Times New Roman", Arial, sans-serif; 
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 10px;
@@ -167,9 +179,9 @@ p
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
 }
 
-#insertData
+#insertData #userId, #insertData #userPswd
 {
-    text-align: center;
+    width: 100%;
 }
 
 #insertData button::after
@@ -201,11 +213,6 @@ p
     height: auto;
 }
 
-#loginNav
-{
-    display: none;
-}
-
 #loginForm
 {
     background-color: #ffffff;
@@ -215,12 +222,6 @@ p
     padding: 20px;
     width: 320px;
     height: 200px;
-}
-
-#loginForm label[for="userId"]::after, label[for="userPswd"]::before
-{
-    content: '\A';
-    white-space: pre;
 }
 
 #loginForm label[for="userPswd"]::after, button::before
@@ -367,6 +368,12 @@ p
 }
 
 /* CSS classi */
+
+.hiddenHeader
+{
+    display: none;
+}
+
 .post
 {
     background-color: #edf4f9;
@@ -416,3 +423,56 @@ p
     padding-left: 20px;
 }
 
+
+#profileForm
+{
+    background-color: #ffffff;
+    margin-right:0px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,9,0,0.5);
+    padding: 20px;
+}
+
+
+.nameLogOut
+{
+    position: absolute;
+    top: 5px;
+    left: 1200px;
+}
+
+.nameLogOut h3
+{
+    color: #ffffff;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.nameLogOut a
+{
+    height: 200px;
+}
+
+.iconPic
+{
+    width: 30px;
+    height: 30px;
+}
+
+.nameLogOut h3, .iconPic
+{
+    display: inline-block;
+}
+
+.nameLogOut a::before
+{
+    content: '\A';
+    white-space: pre;
+}
+
+#logoutP
+{
+    font: 20px/15px "Calibri", "Times New Roman", Arial, sans-serif;
+    margin: 0px;
+    padding-left: 50px;
+}
