--- a/ProgettoAMM/web/style.css
+++ b/ProgettoAMM/web/style.css
@@ -841,6 +841,13 @@ label:after, button:before
     }
 }
 
+
+/* MILESTONE 3 DIV ERRORE PROFILO */
+#profileError
+{
+    padding-left: 350px;
+}
+
 /* Immagini decorative */
 /*
 *
