--- a/ProgettoAMM/web/style.css
+++ b/ProgettoAMM/web/style.css
@@ -908,7 +908,22 @@ label:after, button:before
 
 #cercaUtente
 {
-    height: 130px;
+    height: auto;
+}
+
+#cercaUtente li
+{
+    list-style-type: none;
+    background-repeat: no-repeat;
+    background-position: 0px 5px;
+    padding-left: 23px;
+    padding-top: 4px;
+    font-size: 20px;
+}
+
+#cercaUtente input
+{
+    margin-left: 5px;
 }
 
 #formNewPost #text, #formNewPost #image
@@ -921,6 +936,11 @@ label:after, button:before
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
     margin-top: 1px;
+}
+
+#formNewPost label
+{
+    font-size: 25px;
 }
 
 /* Immagini decorative */
