--- a/ProgettoAMM/web/style.css
+++ b/ProgettoAMM/web/style.css
@@ -164,7 +164,7 @@ header nav li.active
     margin-right:0px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
-    }
+}
 
 #preForm a
 {
@@ -174,7 +174,7 @@ header nav li.active
 .sideBar
 {
     background-color: #ffffff;
-    }
+}
 
 #side1 h2
 {
@@ -190,7 +190,7 @@ header nav li.active
     background-color: #edf4f9;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,9,0,0.5);
-    }
+}
 
 #subList h2
 {
@@ -341,6 +341,17 @@ label:after, button:before
     margin-top: 0px;
     padding-bottom: 10px;
     padding-left: 5px;
+}
+
+#amicizia p
+{
+    padding-left: 20px;
+    padding-bottom: 15px;
+}
+
+#amicizia button
+{
+    margin-left: 20px;
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------*/
